k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citation-platform-api
  labels:
    app: citation-platform
    component: api
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
  selector:
    app: citation-platform
    component: api
